feat: add header

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -5,7 +5,29 @@
   <link rel="stylesheet" href="style.css">
   <title>Online Zoo</title>
 </head>
-<body>
+<body class="wrapper">
+<header class="header">
+<nav class="navigation">
+  <div class="logo-menu-wrapper">
+    <div class="logo-wrap">
+      <h1 class="logo-title">PetStory<br>online</h1>
+      <img class="logo-bamboo" src="../../assets/images/bamboo.png" alt="bamboo-logo">
+    </div>
+    <ul class="navigation-list">
+      <li class="navigation-item"><a class="navigation-link active-btn" href="#">About</a></li>
+      <li class="navigation-item"><a class="navigation-link" href="#">Map</a></li>
+      <li class="navigation-item"><a class="navigation-link" href="#">Zoos</a></li>
+      <li class="navigation-item"><a class="navigation-link" href="#">Donate</a></li>
+      <li class="navigation-item"><a class="navigation-link" href="#">Contact us</a></li>
+    </ul>
+  </div>
+  <span>Designed by ©</span>
+</nav>
+  <section class="header-main">
+    <span class="header-title">watch your <span class="header-title-highlight">favorite</span>animal online</span>
+    <button class="header-btn">watch online</button>
+  </section>
+</header>
 <script src="script.js"></script>
 </body>
 </html>
