--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -28,6 +28,19 @@
     <button class="header-btn">watch online</button>
   </section>
 </header>
+<main class="main">
+  <section class="first-section">
+    <img class="first-section-img" src="../../assets/images/bamboo-cap.png" alt="Man with bamboo hat">
+    <div class="first-section-content">
+      <h2 class="main-title">The Backstage of the Wilderness World.</h2>
+      <p class="paragraph">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
+      <h4 class="subtitle">How it works</h4>
+      <p class="paragraph">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
+    </div>
+    <img src="../../assets/images/flower_foto1.png" alt="flower decoration" class="first-section-decoration">
+  </section>
+</main>
+
 <script src="script.js"></script>
 </body>
 </html>
