--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -25,7 +25,7 @@
 </nav>
   <section class="header-main">
     <span class="header-title">watch your <span class="header-title-highlight">favorite</span>animal online</span>
-    <button class="header-btn">watch online</button>
+    <button class="header-btn btn">watch online</button>
   </section>
 </header>
 <main class="main">
@@ -34,11 +34,96 @@
     <div class="first-section-content">
       <h2 class="main-title">The Backstage of the Wilderness World.</h2>
       <p class="paragraph">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
-      <h4 class="subtitle">How it works</h4>
+      <h3 class="subtitle">How it works</h3>
       <p class="paragraph">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
     </div>
     <img src="../../assets/images/flower_foto1.png" alt="flower decoration" class="first-section-decoration">
   </section>
+
+  <section class="second-section">
+    <div class="wrapper-bar">
+      <div class="bar-item">
+        <img src="../../assets/images/panda.png" alt="panda picture" class="bar-item-img">
+        <div class="description">
+          <div class="description-container">
+            <h4 class="description-title">Giant Pandas</h4>
+            <p class="paragraph">Native to Southwest China</p>
+          </div>
+          <img src="../../assets/icons/banana-bamboo_icon.png" alt="banana bamboo icon" class="description-icon">
+        </div>
+
+      </div>
+      <div class="bar-item">
+        <img src="../../assets/images/eagle.png" alt="eagle picture" class="bar-item-img">
+        <div class="description">
+          <div class="description-container">
+            <h4 class="description-title">Eagles</h4>
+            <p class="paragraph">Native to South America</p>
+          </div>
+          <img src="../../assets/icons/meet-fish_icon.png" alt="meat fish icon" class="description-icon">
+        </div>
+      </div>
+      <div class="bar-item">
+        <img src="../../assets/images/gorilla.png" alt="gorilla picture" class="bar-item-img">
+        <div class="description">
+          <div class="description-container">
+            <h4 class="description-title">Gorillas</h4>
+            <p class="paragraph">Native to Congo</p>
+          </div>
+          <img src="../../assets/icons/banana-bamboo_icon.png" alt="banana bamboo icon" class="description-icon">
+        </div>
+      </div>
+      <div class="bar-item">
+        <img src="../../assets/images/sloth.png" alt="sloth picture" class="bar-item-img">
+        <div class="description">
+          <div class="description-container">
+            <h4 class="description-title">Two-toed Sloth</h4>
+            <p class="paragraph">Mesoamerica, South America</p>
+          </div>
+          <img src="../../assets/icons/banana-bamboo_icon.png" alt="banana bamboo icon" class="description-icon">
+        </div>
+      </div>
+      <div class="bar-item">
+        <img src="../../assets/images/cats.png" alt="cats picture" class="bar-item-img">
+        <div class="description">
+          <div class="description-container">
+            <h4 class="description-title">Cheetahs</h4>
+            <p class="paragraph">Native to Africa</p>
+          </div>
+          <img src="../../assets/icons/meet-fish_icon.png" alt="meat fish icon" class="description-icon">
+        </div>
+      </div>
+      <div class="bar-item">
+        <img src="../../assets/images/penguin.png" alt="penguin picture" class="bar-item-img">
+        <div class="description">
+          <div class="description-container">
+            <h4 class="description-title">Penguins</h4>
+            <p class="paragraph">Native to Antarctica</p>
+          </div>
+          <img src="../../assets/icons/meet-fish_icon.png" alt="meat fish icon" class="description-icon">
+        </div>
+      </div>
+      <div class="arrow-wrap arrow-wrap-position-left">
+        <svg class="arrow" width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M5.00202 9.10791L5.10646 9.20923L5.2109 9.10791L5.35106 8.97193L5.46204 8.86427L5.35106 8.75661L1.74949 5.26276L17 5.26276H17.15V5.11276V4.92044V4.77044H17L1.74986 4.77044L5.35107 1.27659L5.46204 1.16893L5.35106 1.06127L5.2109 0.925298L5.10646 0.823971L5.00201 0.925298L0.895554 4.90913L0.784573 5.0168L0.895559 5.12446L5.00202 9.10791Z" fill="white" stroke="white" stroke-width="0.3"/>
+        </svg>
+      </div>
+      <div class="arrow-wrap arrow-wrap-position-right">
+        <svg class="arrow" width="18" height="10" viewBox="0 0 18 10" fill="white" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12.998 0.892334L12.8935 0.791016L12.7891 0.892338L12.6489 1.02831L12.538 1.13598L12.6489 1.24364L16.2505 4.73748H1H0.85V4.88748V5.07981V5.22981H1H16.2501L12.6489 8.72365L12.538 8.83131L12.6489 8.93897L12.7891 9.07495L12.8935 9.17627L12.998 9.07495L17.1044 5.09111L17.2154 4.98345L17.1044 4.87578L12.998 0.892334Z" fill="white" stroke="white" stroke-width="0.3"/>
+        </svg>
+      </div>
+    </div>
+
+    <button class="second-section-btn btn">choose your favorite</button>
+    <img src="../../assets/images/palm_foto.png" alt="palm picture" class="second-sec-dec left-dec">
+    <img src="../../assets/images/strelitzia.png" alt="strelitzia flower picture" class="second-sec-dec right-dec">
+
+  </section>
+  <section class="third-section">
+  </section>
+
+
 </main>
 
 <script src="script.js"></script>
