--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -34,7 +34,7 @@
     <div class="first-section-content">
       <h2 class="main-title">The Backstage of the Wilderness World.</h2>
       <p class="paragraph">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
-      <h3 class="subtitle">How it works</h3>
+      <h4 class="subtitle">How it works</h4>
       <p class="paragraph">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
     </div>
     <img src="../../assets/images/flower_foto1.png" alt="flower decoration" class="first-section-decoration">
@@ -114,13 +114,46 @@
         </svg>
       </div>
     </div>
-
     <button class="second-section-btn btn">choose your favorite</button>
     <img src="../../assets/images/palm_foto.png" alt="palm picture" class="second-sec-dec left-dec">
     <img src="../../assets/images/strelitzia.png" alt="strelitzia flower picture" class="second-sec-dec right-dec">
-
   </section>
+
   <section class="third-section">
+    <div class="donat-section-wrapper">
+      <h2 class="third-section-title align">Pick and feed a friend</h2>
+      <h4 class="subtitle ">We know the animals bring you joy, and in these extraordinary times, we’re glad.</h4>
+      <div class="paragraph-wrapper">
+        <p class="paragraph fw500">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
+        <p class="paragraph">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our Emergency Support Fund .</p>
+      </div>
+      <h3 class="subheading align">How it  works</h3>
+      <div class="donat-section-instruction">
+        <div class="icon-wrapper">
+          <img src="../../assets/icons/pay.png" alt="payment icon" class="instruction-icon">
+        </div>
+        <img src="../../assets/icons/Vector.png" alt="arrow icon icon" class="arrow-icon">
+        <div class="icon-wrapper">
+          <img src="../../assets/icons/zoo.png" alt="zoo icon" class="instruction-icon">
+        </div>
+        <img src="../../assets/icons/Vector.png" alt="arrow icon" class="arrow-icon">
+        <div class="icon-wrapper">
+          <img src="../../assets/icons/monkey.png" alt="monkey icon" class="instruction-icon">
+        </div>
+        <div class="content-wrapper">
+          <p class="paragraph fit-content">Pay with card</p>
+          <p class="paragraph fit-content">Payment goes to the zoo</p>
+          <p class="paragraph fit-content">Your favourite animal gets delicious dish</p>
+        </div>
+        </div>
+      <button class="third-section-btn btn">Feed a friend now</button>
+      </div>
+
+
+
+
+
+    </div>
   </section>
 
 
