feat: add testimonial section

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -156,6 +156,85 @@
     </div>
   </section>
 
+  <section class="fourth-section">
+    <h3 class="subheading align">Testimonials</h3>
+    <div class="testimonials-wrapper">
+      <div class="testimonial-item">
+        <div class="user-testimonial">
+          <img src="../../assets/images/user_icon.png" alt="user img" class="user-img">
+          <div class="user-information">
+            <p class="user-name">Michael John</p>
+            <span class="user-location">Local Austria</span>
+            <span class="testimonial-data">• Today</span>
+          </div>
+        </div>
+        <div class="testimonial-p-wrapper">
+          <p class="testimonial-paragraph">The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+          </p>
+        </div>
+      </div>
+
+      <div class="testimonial-item">
+        <div class="user-testimonial">
+          <img src="../../assets/images/user1.png" alt="user img" class="user-img">
+          <div class="user-information">
+            <span class="user-name">Oskar Samborsky</span>
+            <span class="user-location">Local Austria</span>
+            <span class="testimonial-data">• Yesterday</span>
+          </div>
+        </div>
+        <div class="testimonial-p-wrapper">
+          <p class="testimonial-paragraph">Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+
+            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+          </p>
+        </div>
+      </div>
+
+      <div class="testimonial-item">
+        <div class="user-testimonial">
+          <img src="../../assets/images/user2.png" alt="user img" class="user-img">
+          <div class="user-information">
+            <span class="user-name">Fredericka Michelin</span>
+            <span class="user-location">Local Austria</span>
+            <span class="testimonial-data">• Yesterday</span>
+          </div>
+        </div>
+        <div class="testimonial-p-wrapper">
+          <p class="testimonial-paragraph">The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met.
+            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+          </p>
+        </div>
+      </div>
+
+      <div class="testimonial-item">
+        <div class="user-testimonial">
+          <img src="../../assets/images/user3.png" alt="user img" class="user-img">
+          <div class="user-information">
+            <span class="user-name">Mila Riksha</span>
+            <span class="user-location">Local Austria</span>
+            <span class="testimonial-data">• Yesterday</span>
+          </div>
+        </div>
+        <div class="testimonial-p-wrapper">
+          <p class="testimonial-paragraph">My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+          </p>
+        </div>
+      </div>
+
+      <div class="slider"></div>
+    </div>
+
+    <button class="fourth-section-btn btn">choose your favorite</button>
+
+    <img src="../../assets/images/leav_foto.png" alt="leave picture" class="fourth-sec-dec">
+
+  </section>
+
 
 </main>
 
