feat: add footer

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -10,8 +10,10 @@
 <nav class="navigation">
   <div class="logo-menu-wrapper">
     <div class="logo-wrap">
-      <h1 class="logo-title">PetStory<br>online</h1>
-      <img class="logo-bamboo" src="../../assets/images/bamboo.png" alt="bamboo-logo">
+      <a href="#" class="logo-link">
+        <h1 class="logo-title">PetStory<br>online</h1>
+        <img class="logo-bamboo" src="../../assets/images/bamboo.png" alt="bamboo-logo">
+      </a>
     </div>
     <ul class="navigation-list">
       <li class="navigation-item"><a class="navigation-link active-btn" href="#">About</a></li>
@@ -23,10 +25,10 @@
   </div>
   <span>Designed by ©</span>
 </nav>
-  <section class="header-main">
-    <span class="header-title">watch your <span class="header-title-highlight">favorite</span>animal online</span>
+  <div class="header-main">
+    <span class="header-title">watch your<span class="header-title-highlight">favorite</span>animal online</span>
     <button class="header-btn btn">watch online</button>
-  </section>
+  </div>
 </header>
 <main class="main">
   <section class="first-section">
@@ -148,12 +150,6 @@
         </div>
       <button class="third-section-btn btn">Feed a friend now</button>
       </div>
-
-
-
-
-
-    </div>
   </section>
 
   <section class="fourth-section">
@@ -228,15 +224,72 @@
 
       <div class="slider"></div>
     </div>
-
     <button class="fourth-section-btn btn">choose your favorite</button>
-
     <img src="../../assets/images/leav_foto.png" alt="leave picture" class="fourth-sec-dec">
-
   </section>
-
-
 </main>
+<footer class="footer">
+
+  <div class="footer-top-container">
+    <div class="footer-logo-wrap">
+      <a href="#" class="logo-link">
+        <h2 class="footer-logo-title">PetStory<br>online</h2>
+        <img class="footer-logo-bamboo" src="../../assets/images/bamboo.png" alt="bamboo-logo">
+      </a>
+    </div>
+    <div class="footer-subscription-wrap">
+      <h4 class="subtitle color-white">Subscribe to our news</h4>
+      <form action="index.html">
+        <input type="email" id="sub" class="sub-input" placeholder="Enter your email">
+        <button class="submit-btn">Submit</button>
+      </form>
+    </div>
+  </div>
+  <button class="fourth-section-btn btn">donate for volunteers</button>
+
+  <div class="footer-bottom-container">
+    <div class="social-media-wrapper">
+      <a href="" class="social-media-link">
+        <div class="icon-container">
+          <img src="../../assets/icons/fb-icon.png" alt="facebook icon" class="social-icon">
+        </div>
+        <span class="social-title">Facebook</span>
+      </a>
+      <a href="" class="social-media-link">
+        <div class="icon-container">
+          <img src="../../assets/icons/twitter-icon.png" alt="twitter icon" class="social-icon">
+        </div>
+        <span class="social-title">Twitter</span>
+      </a>
+      <a href="" class="social-media-link">
+        <div class="icon-container">
+          <img src="../../assets/icons/insta-icon.png" alt="instagram icon" class="social-icon">
+        </div>
+        <span class="social-title">Instagram</span>
+      </a>
+      <a href="" class="social-media-link">
+        <div class="icon-container">
+         <img src="../../assets/icons/yb-icon.png" alt="youtube icon" class="social-icon">
+        </div>
+        <span class="social-title">YouTube</span>
+      </a>
+    </div>
+    <nav class="footer-navigation">
+      <ul class="navigation-list">
+        <li class="navigation-item"><a class="navigation-link active-btn" href="#">About</a></li>
+        <li class="navigation-item"><a class="navigation-link" href="#">Map</a></li>
+        <li class="navigation-item"><a class="navigation-link" href="#">Zoos</a></li>
+        <li class="navigation-item"><a class="navigation-link" href="#">Contact us</a></li>
+      </ul>
+    </nav>
+    <div class="footer-copyright">
+      <span class="copyright-subtitle">Designed by Viktoria Radchenko</span>
+      <span class="copyright-subtitle">©RSSchool 2022</span>
+    </div>
+  </div>
+
+</footer>
+
 
 <script src="script.js"></script>
 </body>
