init: add Donate page

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -16,11 +16,11 @@
       </a>
     </div>
     <ul class="navigation-list">
-      <li class="navigation-item"><a class="navigation-link active-btn" href="#">About</a></li>
-      <li class="navigation-item"><a class="navigation-link" href="#">Map</a></li>
-      <li class="navigation-item"><a class="navigation-link" href="#">Zoos</a></li>
-      <li class="navigation-item"><a class="navigation-link" href="#">Donate</a></li>
-      <li class="navigation-item"><a class="navigation-link" href="#">Contact us</a></li>
+      <li class="navigation-item"><a class="navigation-link active-btn" id="about-btn" href="../../pages/main/index.html">About</a></li>
+      <li class="navigation-item"><a class="navigation-link" id="map-btn" href="#">Map</a></li>
+      <li class="navigation-item"><a class="navigation-link" id="zoos-btn" href="#">Zoos</a></li>
+      <li class="navigation-item"><a class="navigation-link" id="donate-btn" href="../../pages/Donate/index.html">Donate</a></li>
+      <li class="navigation-item"><a class="navigation-link" id="contact-btn" href="#">Contact us</a></li>
     </ul>
   </div>
   <span>Designed by ©</span>
