feat: add interactivity to buttons

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -16,14 +16,14 @@
       </a>
     </div>
     <ul class="navigation-list">
-      <li class="navigation-item"><a class="navigation-link active-btn" id="about-btn" href="../../pages/main/index.html">About</a></li>
-      <li class="navigation-item"><a class="navigation-link" id="map-btn" href="#">Map</a></li>
-      <li class="navigation-item"><a class="navigation-link" id="zoos-btn" href="#">Zoos</a></li>
-      <li class="navigation-item"><a class="navigation-link" id="donate-btn" href="../../pages/Donate/index.html">Donate</a></li>
-      <li class="navigation-item"><a class="navigation-link" id="contact-btn" href="#">Contact us</a></li>
+      <li class="navigation-item active-btn"><a class="navigation-link" id="about-btn" href="../../pages/main/index.html">About</a></li>
+      <li class="navigation-item"><a class="navigation-link" href="#">Map</a></li>
+      <li class="navigation-item"><a class="navigation-link" href="#">Zoos</a></li>
+      <li class="navigation-item"><a class="navigation-link" href="../../pages/Donate/index.html">Donate</a></li>
+      <li class="navigation-item"><a class="navigation-link" href="#">Contact us</a></li>
     </ul>
   </div>
-  <span>Designed by ©</span>
+  <a href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1" target="_blank" class="link-designed">Designed by ©</a>
 </nav>
   <div class="header-main">
     <span class="header-title">watch your<span class="header-title-highlight">favorite</span>animal online</span>
@@ -52,8 +52,7 @@
             <p class="paragraph">Native to Southwest China</p>
           </div>
           <img src="../../assets/icons/banana-bamboo_icon.png" alt="banana bamboo icon" class="description-icon">
-        </div>
-
+        </div> 
       </div>
       <div class="bar-item">
         <img src="../../assets/images/eagle.png" alt="eagle picture" class="bar-item-img">
@@ -124,12 +123,13 @@
   <section class="third-section">
     <div class="donat-section-wrapper">
       <h2 class="third-section-title align">Pick and feed a friend</h2>
-      <h4 class="subtitle ">We know the animals bring you joy, and in these extraordinary times, we’re glad.</h4>
+      <h4 class="subtitle third-section-text">We know the animals bring you joy, and in these extraordinary times, we’re glad.</h4>
       <div class="paragraph-wrapper">
         <p class="paragraph fw500">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
-        <p class="paragraph">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our Emergency Support Fund .</p>
+        <p class="paragraph">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our
+          <a href="../../pages/Donate/index.html" class="support-link">Emergency Support Fund.</a></p>
       </div>
-      <h3 class="subheading align">How it  works</h3>
+      <h3 class="subheading align third-section-padding">How it  works</h3>
       <div class="donat-section-instruction">
         <div class="icon-wrapper">
           <img src="../../assets/icons/pay.png" alt="payment icon" class="instruction-icon">
@@ -153,7 +153,7 @@
   </section>
 
   <section class="fourth-section">
-    <h3 class="subheading align">Testimonials</h3>
+    <h3 class="subheading align testimonial-title">Testimonials</h3>
     <div class="testimonials-wrapper">
       <div class="testimonial-item">
         <div class="user-testimonial">
@@ -224,12 +224,11 @@
 
       <div class="slider"></div>
     </div>
-    <button class="fourth-section-btn btn">choose your favorite</button>
+    <button class="fourth-section-btn btn">leave feedback</button>
     <img src="../../assets/images/leav_foto.png" alt="leave picture" class="fourth-sec-dec">
   </section>
 </main>
 <footer class="footer">
-
   <div class="footer-top-container">
     <div class="footer-logo-wrap">
       <a href="#" class="logo-link">
@@ -245,7 +244,7 @@
       </form>
     </div>
   </div>
-  <button class="fourth-section-btn btn">donate for volunteers</button>
+  <a href="../../pages/Donate/index.html" class="fourth-section-btn btn">donate for volunteers</a>
 
   <div class="footer-bottom-container">
     <div class="social-media-wrapper">
@@ -276,7 +275,7 @@
     </div>
     <nav class="footer-navigation">
       <ul class="navigation-list">
-        <li class="navigation-item"><a class="navigation-link active-btn" href="#">About</a></li>
+        <li class="navigation-item active-btn"><a class="navigation-link" href="../../pages/main/index.html">About</a></li>
         <li class="navigation-item"><a class="navigation-link" href="#">Map</a></li>
         <li class="navigation-item"><a class="navigation-link" href="#">Zoos</a></li>
         <li class="navigation-item"><a class="navigation-link" href="#">Contact us</a></li>
