feat: add header for donate page

--- a/pages/Donate/index.html
+++ b/pages/Donate/index.html
@@ -7,25 +7,26 @@
   <link rel="stylesheet" href="../../pages/Donate/style.css">
 </head>
 <body class="wrapper">
-<nav class="navigation">
-  <div class="logo-menu-wrapper">
-    <div class="logo-wrap">
-      <a href="../../pages/main/index.html" class="logo-link">
-        <h1 class="logo-title">PetStory<br>online</h1>
-        <img class="logo-bamboo" src="../../assets/images/bamboo.png" alt="bamboo-logo">
-      </a>
+<header class="header header-donate">
+  <nav class="navigation">
+    <div class="logo-menu-wrapper">
+      <div class="logo-wrap">
+        <a href="#" class="logo-link">
+          <h1 class="logo-title">PetStory<br>online</h1>
+          <img class="logo-bamboo" src="../../assets/images/bamboo.png" alt="bamboo-logo">
+        </a>
+      </div>
+      <ul class="navigation-list">
+        <li class="navigation-item"><a class="navigation-link" id="about-btn" href="../../pages/main/index.html">About</a></li>
+        <li class="navigation-item"><a class="navigation-link" href="#">Map</a></li>
+        <li class="navigation-item"><a class="navigation-link" href="#">Zoos</a></li>
+        <li class="navigation-item active-btn"><a class="navigation-link" href="../../pages/Donate/index.html">Donate</a></li>
+        <li class="navigation-item"><a class="navigation-link" href="#">Contact us</a></li>
+      </ul>
     </div>
-    <ul class="navigation-list">
-      <li class="navigation-item"><a class="navigation-link" href="../../pages/main/index.html">About</a></li>
-      <li class="navigation-item"><a class="navigation-link" href="#">Map</a></li>
-      <li class="navigation-item"><a class="navigation-link" href="#">Zoos</a></li>
-      <li class="navigation-item"><a class="navigation-link active-btn" href="#">Donate</a></li>
-      <li class="navigation-item"><a class="navigation-link" href="#">Contact us</a></li>
-    </ul>
-  </div>
-  <span>Designed by ©</span>
-</nav>
-<h2 class="warning-msg">Sorry this page is in progress</h2>
+    <a href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1" target="_blank" class="link-designed">Designed by ©</a>
+  </nav>
+</header>
 
 </body>
 </html>
