--- a/pages/Donate/index.html
+++ b/pages/Donate/index.html
@@ -11,7 +11,7 @@
   <nav class="navigation">
     <div class="logo-menu-wrapper">
       <div class="logo-wrap">
-        <a href="#" class="logo-link">
+        <a href="../main/index.html" class="logo-link">
           <h1 class="logo-title">PetStory<br>online</h1>
           <img class="logo-bamboo" src="../../assets/images/bamboo.png" alt="bamboo-logo">
         </a>
@@ -27,6 +27,47 @@
     <a href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1" target="_blank" class="link-designed">Designed by ©</a>
   </nav>
 </header>
+<main class="donate-main">
+  <h3 class="subheading uppercase donate-text-color">The zoo has officially reopened but we still need your help!</h3>
+  <p class="paragraph p-margin donate-text-color">Even though the Zoo has been able to reopen, we are at a greatly reduced capacity with educational programs and public and private events cancelled or postponed for additional months. We need you now more than ever to help ensure that we overcome these challenges. We have been actively raising funds in the community, and we are grateful for the generosity.  But much more support is still needed, and we need your help! Please consider a gift today – no matter what size – to help us sustain our mission.</p>
+  <h3 class="subheading main-color">Donation Information</h3>
+  <div class="donate-container">
+    <h2 class="main-title main-color align">Pick and feed a friend</h2>
+    <h4 class="subtitle s-margin">We know the animals bring you joy, and in these extraordinary times, we’re glad.</h4>
+      <div class="diet-wrapper">
+        <span class="diet-content">4<span class="diet-content-text">Panda diet for the day</span></span>
+        <img src="../../assets/icons/x_icon.png" alt="x icon" class="x-icon">
+        <img src="../../assets/images/animals-widget.png" alt="panda picture" class="panda-img">
+      </div>
+    <span class="span-margin">Amount</span>
+    <div class="price-bar">
+      <div class="dot"><span class="amount">5000</span></div>
+      <div class="dot"><span class="amount">2000</span></div>
+      <div class="dot dot-selected"><span class="amount selected">1000</span></div>
+      <div class="dot"><span class="amount">500</span></div>
+      <div class="dot"><span class="amount">250</span></div>
+      <div class="dot"><span class="amount">100</span></div>
+      <div class="dot"><span class="amount">50</span></div>
+      <div class="dot"><span class="amount">25</span></div>
+    </div>
+
+    <form action="index.html" class="donate-form">
+      <div class="donate-input-wrapper">
+        <input type="number" id="donate-input" class="donate-input" placeholder="Another amount">
+      </div>
+      <fieldset class="input-radio-wrapper">
+        <input type="radio" name="styles" id="outline1" class="custom-radio">
+        <label for="outline1" class="i-margin">Monthly</label>
+        <input type="radio" name="styles" id="outline2" class="custom-radio">
+        <label for="outline2">Once</label>
+      </fieldset>
+      <button class="btn donate-btn">Feed a friend now</button>
+    </form>
+    <p class="paragraph donate-paragraph">Share with your friends on social networks </p>
+  </div>
+</main>
+
+
 
 </body>
 </html>
