feat: add footer section to donate page

--- a/pages/Donate/index.html
+++ b/pages/Donate/index.html
@@ -67,7 +67,66 @@
   </div>
 </main>
 
+<footer class="footer">
+  <div class="footer-top-container">
+    <div class="footer-logo-wrap">
+      <a href="../main/index.html" class="logo-link">
+        <h2 class="footer-logo-title">PetStory<br>online</h2>
+        <img class="footer-logo-bamboo" src="../../assets/images/bamboo.png" alt="bamboo-logo">
+      </a>
+    </div>
+    <div class="footer-subscription-wrap">
+      <h4 class="subtitle color-white">Subscribe to our news</h4>
+      <form action="index.html">
+        <input type="email" id="sub" class="sub-input" placeholder="Enter your email">
+        <button class="submit-btn">Submit</button>
+      </form>
+    </div>
+  </div>
+  <a href="../../pages/Donate/index.html" class="fourth-section-btn btn">donate for volunteers</a>
 
+  <div class="footer-bottom-container">
+    <div class="social-media-wrapper">
+      <a href="" class="social-media-link">
+        <div class="icon-container">
+          <img src="../../assets/icons/fb-icon.png" alt="facebook icon" class="social-icon">
+        </div>
+        <span class="social-title">Facebook</span>
+      </a>
+      <a href="" class="social-media-link">
+        <div class="icon-container">
+          <img src="../../assets/icons/twitter-icon.png" alt="twitter icon" class="social-icon">
+        </div>
+        <span class="social-title">Twitter</span>
+      </a>
+      <a href="" class="social-media-link">
+        <div class="icon-container">
+          <img src="../../assets/icons/insta-icon.png" alt="instagram icon" class="social-icon">
+        </div>
+        <span class="social-title">Instagram</span>
+      </a>
+      <a href="" class="social-media-link">
+        <div class="icon-container">
+          <img src="../../assets/icons/yb-icon.png" alt="youtube icon" class="social-icon">
+        </div>
+        <span class="social-title">YouTube</span>
+      </a>
+    </div>
+    <nav class="footer-navigation">
+      <ul class="navigation-list">
+        <li class="navigation-item"><a class="footer-navigation-link" href="../main/index.html">About</a></li>
+        <li class="navigation-item"><a class="footer-navigation-link" href="#">Map</a></li>
+        <li class="navigation-item"><a class="footer-navigation-link" href="#">Zoos</a></li>
+        <li class="navigation-item"><a class="footer-navigation-link" href="#">Contact us</a></li>
+      </ul>
+    </nav>
+    <div class="footer-copyright">
+      <span class="copyright-subtitle">Designed by Alisa Samborskaya</span>
+      <span class="copyright-subtitle">©RSSchool 2022</span>
+    </div>
+  </div>
+
+</footer>
 
 </body>
 </html>
