fix: update copyright

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -282,7 +282,7 @@
       </ul>
     </nav>
     <div class="footer-copyright">
-      <span class="copyright-subtitle">Designed by Viktoria Radchenko</span>
+      <span class="copyright-subtitle">Designed by Alisa Samborskaya</span>
       <span class="copyright-subtitle">©RSSchool 2022</span>
     </div>
   </div>
