--- a/pages/Donate/index.html
+++ b/pages/Donate/index.html
@@ -58,7 +58,7 @@
       <fieldset class="input-radio-wrapper">
         <input type="radio" name="styles" id="outline1" class="custom-radio">
         <label for="outline1" class="i-margin">Monthly</label>
-        <input type="radio" name="styles" id="outline2" class="custom-radio">
+        <input type="radio" name="styles" id="outline2" checked class="custom-radio">
         <label for="outline2">Once</label>
       </fieldset>
       <button class="btn donate-btn">Feed a friend now</button>
